# GameTest

./: .gitignore  CMakeLists.txt  DETAILS.md  EXAMPLE.md  HOW_IT_WORKS.md  LICENSE.md  README.md  TOOL.md
.github/workflows/: win32-build.yml
example/: Game.c  record-game-test.bat  replay-game-test.bat
example/tests/: playing.gmt
examples/: basic.c
include/: GameTest.h  game_test.h
include/GameTest/: Base.h  FileManager.h  InputPlayer.h  InputRecorder.h  InputState.h  WorkFiles.h
scripts/: game-test-parallel.bat  game-test-parallel.ps1  game-test-parallel.sh  game-test.bat  game-test.ps1  game-test.sh
src/: Assert.c  FileManagerWin32.c  GameTest.c  InputPlayerWin32.c  InputRecorderWin32.c  InputState.c  InputState.h  Internal.h  Log.c  Memory.c  Pin.c  Platform.h  PlatformWin32.c  Record.c  Record.h  Signal.c  Track.c  Util.c  UtilityWin32.h  game_test.c
tests/example/tests/: playing.gmt.gmt
tool/: Tool.c  ToolPlatform.h  ToolPlatformWin32.c
tools/: LaunchIsolatedWin32.c
